--- a/resources.qrc
+++ b/resources.qrc
@@ -5,7 +5,7 @@
         <file>resources/sounds/castling.wav</file>
         <file>resources/sounds/check.wav</file>
         <file>resources/sounds/checkmate.wav</file>
-        <file>resources/sounds/explosion.wav</file>
+        <file>resources/sounds/bomb.mp3</file>
         <!-- Background music files -->
         <file>resources/backgroundsounds/backgroundsound_1.mp3</file>
         <file>resources/backgroundsounds/backgroundsound_2.mp3</file>
